<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.micha.s300378.GStatistics">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp">

                <TextView
                    android:id="@+id/twEmpty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isEmpty"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp">

                <TextView
                    android:id="@+id/twWins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TextWin"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>

                <TextView
                    android:id="@+id/twLoss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TextLoss"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp">

                <TextView
                    android:id="@+id/twWinsScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_marginRight="85dp"/>

                <TextView
                    android:id="@+id/twLossScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_marginLeft="85dp"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
